--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+ul {
+  list-style: none;
+}
+
+.item {
+  border: none;
+}
