--- a/src/components/shoes-shore/store.css
+++ b/src/components/shoes-shore/store.css
@@ -9,15 +9,15 @@
 }
 
 .header-cart-modal {
-  position: absolute;
-  z-index: 1000;
-  display: none;
+  position: fixed;
   top: 20%;
-  right: 20%;
-  width: 60%;
-  background-color: rgb(255, 255, 255);
-  border-radius: 4px;
-  border: 2px solid rgb(165, 165, 165);
+  right: -10%;
+  z-index: 1050;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  outline: 0;
 }
 
 .shoes-list-item {
