--- a/src/components/shoes-shore/store.css
+++ b/src/components/shoes-shore/store.css
@@ -20,6 +20,17 @@
   outline: 0;
 }
 
+.modal-item {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1050;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  outline: 0;
+}
+
 .shoes-list-item {
   width: 200px;
 }
