--- a/src/components/shop/store.css
+++ b/src/components/shop/store.css
@@ -10,14 +10,15 @@
 
 .header-cart-modal {
   position: fixed;
-  top: 20%;
-  right: -10%;
+  top: 0;
+  right: 0;
   z-index: 1050;
 
   width: 100%;
   height: 100%;
   overflow: hidden;
   outline: 0;
+  padding-top: 10%;
 }
 
 .modal-item {
@@ -40,13 +41,13 @@
 }
 .item-image-modal img {
   width: 100%;
-  height: 300px;
+  height: 100%;
 }
 
 .alert-cart {
   position: fixed;
   top: 15%;
-  right: 20%;
+  right: 25%;
 }
 
 ul {
