--- a/src/components/shop/store.css
+++ b/src/components/shop/store.css
@@ -13,12 +13,16 @@
   top: 0;
   right: 0;
   z-index: 1050;
-
   width: 100%;
   height: 100%;
-  overflow: hidden;
   outline: 0;
   padding-top: 10%;
+}
+
+.modal-body-cart {
+  overflow: hidden;
+  height: 400px;
+  overflow-y: auto;
 }
 
 .modal-item {
